# cmake_project_template

./: CMakeLists.txt  LICENSE  README.md  clean_all.cmake  platform_toto.cmake
dir1/: CMakeLists.txt  Makefile  cmake_install.cmake  test1.c  test2.c
dir1/include1/: test1.h  test2.h
dir2/: CMakeLists.txt  main.c
dir3/: CMakeLists.txt  test3.c
dir3/include/: test3.h
include1/: project.h
